crates/walrus-parser/snapshots/nested_call_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Call(
            CallExpr {
                func: Call(
                    CallExpr {
                        func: Var(
                            Var(
                                Ident {
                                    span: 0..1,
                                    text: "f",
                                },
                            ),
                        ),
                        args: ArgList(
                            Delimited {
                                open: LParen {
                                    span: 1..2,
                                },
                                inner: Punctuated0 {
                                    first: None,
                                    tail: [],
                                    trail: None,
                                },
                                close: RParen {
                                    span: 2..3,
                                },
                            },
                        ),
                    },
                ),
                args: ArgList(
                    Delimited {
                        open: LParen {
                            span: 3..4,
                        },
                        inner: Punctuated0 {
                            first: None,
                            tail: [],
                            trail: None,
                        },
                        close: RParen {
                            span: 4..5,
                        },
                    },
                ),
            },
        ),
    ),
)
