crates/walrus-parser/snapshots/nested_fn_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Fn {
            args: Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Punctuated0 {
                    first: Some(
                        Var(
                            Var(
                                Ident {
                                    span: 1..2,
                                    text: "A",
                                },
                            ),
                        ),
                    ),
                    tail: [],
                    trail: None,
                },
                close: RParen {
                    span: 2..3,
                },
            },
            ret: RetType {
                thin_arrow: ThinArrow {
                    span: 4..6,
                },
                ty: Fn {
                    args: Delimited {
                        open: LParen {
                            span: 7..8,
                        },
                        inner: Punctuated0 {
                            first: Some(
                                Var(
                                    Var(
                                        Ident {
                                            span: 8..9,
                                            text: "B",
                                        },
                                    ),
                                ),
                            ),
                            tail: [],
                            trail: None,
                        },
                        close: RParen {
                            span: 9..10,
                        },
                    },
                    ret: RetType {
                        thin_arrow: ThinArrow {
                            span: 11..13,
                        },
                        ty: Var(
                            Var(
                                Ident {
                                    span: 14..15,
                                    text: "C",
                                },
                            ),
                        ),
                    },
                },
            },
        },
    ),
)
