crates/walrus-parser/snapshots/nested_mul_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Binary(
            BinaryExpr {
                lhs: Binary(
                    BinaryExpr {
                        lhs: Lit(
                            Int(
                                Dec(
                                    DecInt {
                                        span: 0..1,
                                        text: "1",
                                    },
                                ),
                            ),
                        ),
                        op: Mul(
                            Star {
                                span: 1..2,
                            },
                        ),
                        rhs: Lit(
                            Int(
                                Dec(
                                    DecInt {
                                        span: 2..3,
                                        text: "2",
                                    },
                                ),
                            ),
                        ),
                    },
                ),
                op: Mul(
                    Star {
                        span: 3..4,
                    },
                ),
                rhs: Lit(
                    Int(
                        Dec(
                            DecInt {
                                span: 4..5,
                                text: "3",
                            },
                        ),
                    ),
                ),
            },
        ),
    ),
)
