crates/walrus-parser/snapshots/nested_prefix_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Unary(
            UnaryExpr {
                op: Sub(
                    Minus {
                        span: 0..1,
                    },
                ),
                expr: Unary(
                    UnaryExpr {
                        op: Sub(
                            Minus {
                                span: 1..2,
                            },
                        ),
                        expr: Lit(
                            Int(
                                Dec(
                                    DecInt {
                                        span: 2..3,
                                        text: "2",
                                    },
                                ),
                            ),
                        ),
                    },
                ),
            },
        ),
    ),
)
