crates/walrus-parser/snapshots/paren_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        Paren(
            Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Var {
                    kw_mut: None,
                    var: Var(
                        Ident {
                            span: 1..2,
                            text: "x",
                        },
                    ),
                },
                close: RParen {
                    span: 2..3,
                },
            },
        ),
    ),
)
