crates/walrus-parser/snapshots/paren_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Paren(
            Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Var(
                    Var(
                        Ident {
                            span: 1..2,
                            text: "T",
                        },
                    ),
                ),
                close: RParen {
                    span: 2..3,
                },
            },
        ),
    ),
)
