crates/walrus-parser/snapshots/return_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Return(
            ReturnExpr {
                kw_return: KwReturn {
                    span: 0..6,
                },
                expr: Some(
                    Lit(
                        Int(
                            Dec(
                                DecInt {
                                    span: 7..8,
                                    text: "5",
                                },
                            ),
                        ),
                    ),
                ),
            },
        ),
    ),
)
