crates/walrus-parser/snapshots/simple_char_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        Char(
            Simple(
                SimpleChar {
                    span: 0..3,
                    text: "'a'",
                },
            ),
        ),
    ),
)
